@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.35 (gritter) 4/8/06
+.\" Sccsid @(#)doc.tr	1.36 (gritter) 4/14/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -82,7 +82,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 4/8/06
+.ds Sccsdate 4/14/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -1164,6 +1164,8 @@ Text Filling, Adjusting, and Centering
 .b1
 \fB&kern\fI|N\fR	1	1	O,T	Controls pairwise kerning.
 .b1
+\fB&fkern\fI|F|N\fR	1	1	O,T	Controls the use of kerning tables from font \fIF\fR.
+.b1
 \fB&kernpair\fI|F|c|G|d|N\fR	ignored	O,T	Defines a kerning pair.
 .b1
 \fB&kernafter\fI|F|c|N|d|M|...\fR	ignored	O,T	Adds a constant amount of space after a character.
@@ -1471,6 +1473,7 @@ fc	9
 fdeferlig	10.2
 feature	2
 fi	4
+fkern	4
 fl	20
 flig	10.2
 fp	2
@@ -2813,6 +2816,11 @@ from another font that have been selected by the \fBfallback\fP sequence.
 .bt
 \fB&kern\fI|N\fR	1	1	O,T	Controls pairwise kerning;
 disabled if \fIN\fR=0, otherwise enabled.
+.bt
+\fB&fkern\fI|F|N\fR	1	1	O,T	Controls the use of kerning tables from font \fIF\fR;
+disabled if \fIN\fR=0, otherwise enabled.
+\*(TR kerning adjustments as defined by the following requests
+are not affected.
 .bt
 \fB&kernpair\fI|F|c|G|d|N\fR	ignored	O,T	Adds a kerning pair
 to the kerning table for character \fIc\fR
